--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   cached_network_image: ^3.2.3
+  flutter_markdown: ^0.6.15
 
 dev_dependencies:
   flutter_test:
