--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_serializable: ^6.6.2
   cached_network_image: ^3.2.3
   flutter_markdown: ^0.6.15
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splash_screen.png
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
